# cs2106-lab

./: .gitignore  CMakeLists.txt
Lab 1/: CMakeLists.txt
Lab 1/part1/: CMakeLists.txt  lab1p1  queue.c  queue.h
Lab 1/part2/: CMakeLists.txt
Lab 1/part3/: CMakeLists.txt  bintree.c  lab1p3c
Lab 2/: CMakeLists.txt
Lab 2/part1/autograder/: grade.sh
Lab 2/part1/autograder/subs/A0285757B/: results.out  utils.h.gch
Lab 2/part2/: CMakeLists.txt  lab2p2d.c  lab2p2f  lab2p2f.c
Lab 3/: CMakeLists.txt
Lab 3/part1/: CMakeLists.txt  lab3p1-sem.c
Lab 3/part2/: CMakeLists.txt  barrier.c  test_barrier.c
Lab 3/part3/: CMakeLists.txt  barrier.c  bigsmall-par.c  bigsmall.c
Lab4/: CMakeLists.txt
Lab4/bitmap/: CMakeLists.txt  bitmap.c  harness  mymalloc.c  testmalloc  testmap
Lab4/linkedlist/: CMakeLists.txt  llist.c
Lab4/linkedlist/bf/: CMakeLists.txt  llist.c  llist.h  mymalloc.c
Lab4/linkedlist/ff/: CMakeLists.txt  mymalloc.h
Lab4/linkedlist/wf/: CMakeLists.txt  mymalloc.c
Lab4/phonebook/: CMakeLists.txt  bintree.c  bintree.h  llist.h  mymalloc.c
